# invest_ai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  EXTERNAL_DATA_REQUIREMENTS.md  README.md  codex.md  data_source_mapping.tsv  investai.xlsx  investai_데이터소스설계.docx  investai_데이터소스설계.txt  investai_설계문서.docx  investai_설계문서.txt  investai_설계문서_v2.txt  pyproject.toml  run_investai_cloudrun_deploy.cmd  run_investai_cloudsql_setup.cmd  run_investai_scheduler_setup.cmd  run_investai_server.cmd
app/: __init__.py  main.py
config/: collection_policies.yaml  sources.yaml
docs/: CLOUD_RUN_DEPLOY.md  DATA.md  FEATURE_ACTION_PLANNER.md  FEATURE_ANALYZE_TICKER.md  FEATURE_BATCH_EXECUTION.md  FEATURE_CRAWL_PREVIEW.md  FEATURE_DASHBOARD.md  FEATURE_MARKET_REGIME.md  FEATURE_STOCK_DECISION.md  FEATURE_WATCHLIST_ALERTS.md  HANDOVER_FUNCTIONS.md  WEB_FEATURES_INDEX.md
instruction/: first_and_second_answers.txt  instruction.txt  investai_데이터소스설계_v2.txt
prompts/: alert_explanation_v1.txt
scripts/: run_api_server.ps1  run_e2e_pipeline.py  verify_postgres.py  verify_telegram.py
sql/: schema.sql
tests/: conftest.py  test_batch_ingestor.py  test_batch_market_regime_snapshot.py  test_batch_naver_headlines.py  test_batch_public_research.py  test_dart_financials.py  test_decision_products.py  test_disclosure_llm_scoring.py  test_event_streams.py  test_event_volatility_mode.py  test_global_macro_pipeline.py  test_macro_surprise_index.py  test_market_headline_briefs.py  test_market_regime_snapshot.py  test_overnight_transmission.py  test_provider_caching.py  test_relevance_filters.py  (+8 more)
(+70 files in other folders)
