[project]
name = "investai-signal-alert"
version = "0.1.0"
description = "Stock signal + alert service with Gemini ADC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "apscheduler>=3.10.4",
  "PyYAML>=6.0.2",
  "google-genai>=1.20.0",
  "pypdf>=6.9.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]